# giztoy

./: .bazelignore  .bazelrc  .bazelrc.user.example  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CNAME  LICENSE  MODULE.bazel  PR_CHANGES.md  README-zh.md  README.md  REVIEW_ISSUES.md  WORKSPACE  commit_message_v5_features.txt  extensions.bzl  index.html
bazel/harmonyos/: BUILD.bazel  README.md  defs.bzl  extensions.bzl  providers.bzl  repository.bzl  rules.bzl  settings.bzl  toolchain.bzl
devops/tools/: BUILD.bazel  go.mod  main.go  main_test.go
devops/tools/bazel-affected/: BUILD.bazel  main.go  main_test.go
devops/tools/mdbook/: BUILD.bazel  defs.bzl
devops/tools/pnnx/: BUILD.bazel  README.md  convert_models.py  defs.bzl
devops/tools/yq/: BUILD.bazel  defs.bzl
docs/: 404.html  BUILD.bazel  index.html  outline.html  outline.md  packages-comparison.md  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/bazel/: doc.html
docs/dashscope/: README.md  auth.md
docs/dashscope/realtime/: README.md  client-events.md  server-events.md
docs/doubaospeech/: README.md  auth.md  ssml.md
docs/doubaospeech/asr1.0/: README.md
docs/doubaospeech/asr2.0/: README.md  file-standard.md  streaming.md
docs/doubaospeech/console-api/: README.md  service.md  timbre.md
docs/doubaospeech/media/: README.md
docs/doubaospeech/meeting/: api.md
docs/doubaospeech/podcast/: README.md
docs/doubaospeech/realtime/: README.md  api.md
docs/doubaospeech/self-learning/: README.md
docs/doubaospeech/tts1.0/: README.md  http.md
docs/doubaospeech/tts2.0/: README.md  stream-http.md
docs/doubaospeech/voice-clone/: README.md  api.md
docs/en/: SUMMARY.md  outline.md
docs/en/bazel/: doc.md
docs/en/examples/: doc.md
docs/en/intro/: about.md
docs/examples/: doc.html
docs/intro/: about.html
docs/issues/: doubao-websocket-protocol-unification.md
docs/jiutian/: README.md  device.md
docs/lib/audio/: doc.html  go.html  issues.html  rust.html
docs/lib/buffer/: doc.html  go.html  issues.html  rust.html
docs/lib/chatgear/: doc.html  go.html  issues.html  rust.html
docs/lib/cli/: doc.html  go.html  issues.html  rust.html
docs/lib/dashscope/: doc.html  go.html  issues.html  rust.html
docs/lib/doubaospeech/: doc.html  go.html  issues.html  rust.html
docs/lib/encoding/: doc.html  go.html  issues.html  rust.html
docs/lib/genx/: doc.html  go.html  issues.html  rust.html
docs/lib/jiutian/: doc.html  go.html  issues.html  rust.html
docs/lib/jsontime/: doc.html  go.html  issues.html  rust.html
docs/lib/minimax/: doc.html  go.html  issues.html  rust.html
docs/lib/mqtt0/: doc.html  go.html  issues.html  rust.html
docs/lib/speech/: doc.html  go.html  issues.html  rust.html
docs/lib/trie/: doc.html  go.html  issues.html  rust.html
docs/minimax/: file.md  image.md  music.md  speech-t2a-async.md  video.md  voice-cloning.md  voice-management.md
docs/tracking/: register-func.md  transformer-ctx-bug.md  transformer-eof-eos-semantics.md
docs/zh/: 404.html  SUMMARY.md  custom.css  index.html  lang-switch.js  outline.html  outline.md  packages-comparison.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/zh/bazel/: doc.html  doc.md
docs/zh/esp/: esp-rs-migration.html  esp-rs-migration.md  esp32-dev-comparison.html  esp32-dev-comparison.md
docs/zh/examples/: doc.html  doc.md
docs/zh/intro/: about.html  about.md
e2e/: BUILD.bazel
e2e/bazel/android/: README.md
e2e/bazel/harmonyos/: BUILD.bazel
e2e/chatgear/: BUILD.bazel
e2e/chatgear/monitor/: main.go
e2e/chatgear/testdata/: hello.pcm  weather.pcm
e2e/chatgear/zig/: BUILD.bazel  app.zig  main.zig  platform.zig  testdata.zig
e2e/cmd/: BUILD.bazel
e2e/cmd/dashscope/: BUILD.bazel  README.md  run.go
e2e/cmd/doubaospeech/: BUILD.bazel  run.go
e2e/cmd/minimax/: BUILD.bazel  run.go  run.sh
e2e/cmd/segtest/: BUILD.bazel  benchmark.go  (+2 more)
e2e/doubao_minimax/: BUILD.bazel
e2e/go/: BUILD.bazel  go.mod
e2e/matchtest/: BUILD.bazel  benchmark.go  live_go.sh  runner.go
e2e/memory/: BUILD.bazel  generate.go  main.go  runner.go
e2e/voiceprint/: BUILD.bazel  main.go  rust_e2e_test.rs
embed/apps/: BUILD.bazel
embed/esp/: BUILD.bazel  build.sh
examples/: BUILD.bazel
examples/bazel/: BUILD.bazel  README.md
examples/cmd/: BUILD.bazel
examples/go/: BUILD.bazel  go.mod  go.sum
examples/matchtest/: BUILD.bazel  live.sh  live_go.sh  serve.sh  serve_go.sh
examples/minimax/: BUILD.bazel  README.md  run.sh
examples/rust/: BUILD.bazel
html/matchtest/: BUILD.bazel  app.js  index.html  style.css
luau/c/: BUILD.bazel  luau_wrapper.cpp  luau_wrapper.h
luau/tests/: BUILD.bazel  run_genx_test.sh  run_test.sh  test_builtin.luau  test_coroutine.luau  test_env.luau  test_http_unit.luau  test_json.luau  test_kvs.luau  test_require.luau  test_time.luau
pages/: BUILD.bazel  deploy.sh  serve-local.sh
pages/book/: book-zh.toml  book.toml  mermaid-init.js
rust/: BUILD.bazel  Cargo.toml  README.md
rust/audio/: BUILD.bazel  Cargo.toml  build.rs
rust/buffer/: BUILD.bazel  Cargo.toml
rust/chatgear/: BUILD.bazel  Cargo.toml
rust/cli/: BUILD.bazel  Cargo.toml
rust/dashscope/: BUILD.bazel  Cargo.toml
rust/doubaospeech/: BUILD.bazel  Cargo.toml
rust/embed/: BUILD.bazel  Cargo.toml
rust/encoding/: BUILD.bazel  Cargo.toml
rust/genx/: BUILD.bazel  Cargo.toml
rust/graph/: BUILD.bazel  Cargo.toml
rust/jsontime/: BUILD.bazel  Cargo.toml
rust/kv/: BUILD.bazel  Cargo.toml
rust/luau/: BUILD.bazel  Cargo.toml
rust/memory/: BUILD.bazel  Cargo.toml
rust/minimax/: BUILD.bazel  Cargo.toml
rust/mqtt/: BUILD.bazel  Cargo.toml
rust/mqtt0/: BUILD.bazel  Cargo.toml  README.md
rust/ncnn/: BUILD.bazel  Cargo.toml
rust/onnx/: BUILD.bazel  Cargo.toml  ort_shim.c
rust/openai-realtime/: BUILD.bazel  Cargo.toml
rust/recall/: BUILD.bazel  Cargo.toml
rust/speech/: BUILD.bazel  Cargo.toml
rust/trie/: BUILD.bazel  Cargo.toml
rust/vecid/: BUILD.bazel  Cargo.toml
rust/vecstore/: BUILD.bazel  Cargo.toml
rust/voiceprint/: BUILD.bazel  Cargo.toml
(+2905 files in other folders)
