"""Bazel module definition for giztoy."""

module(
    name = "giztoy",
    version = "0.0.1",
)

# Skylib (required by gazelle)
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Package rules (for static files)
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Go rules
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Platform rules for platform detection
bazel_dep(name = "platforms", version = "1.0.0")

# ============================================================================
# Apple platform rules (MUST be before rules_cc!)
# ============================================================================

# Apple support - provides Apple CC toolchain (must be before rules_cc)
bazel_dep(name = "apple_support", version = "2.2.0")

# Apple platform rules (iOS, macOS, tvOS, watchOS)
bazel_dep(name = "rules_apple", version = "4.3.3")

# Swift language rules (required by rules_apple)
bazel_dep(name = "rules_swift", version = "3.4.2")

# ============================================================================
# Core rules
# ============================================================================

# Rust rules
bazel_dep(name = "rules_rust", version = "0.68.1")

# OpenERP (kv + blob storage crates)
bazel_dep(name = "openerp", version = "0.0.1")

# C/C++ rules (after apple_support for correct toolchain resolution)
bazel_dep(name = "rules_cc", version = "0.2.16")

# Shell rules (required for sh_binary/sh_test in Bazel 8+)
bazel_dep(name = "rules_shell", version = "0.6.1")

# ============================================================================
# Android platform rules
# ============================================================================

# Android platform rules
bazel_dep(name = "rules_android", version = "0.7.1")

# Kotlin language rules (for Kotlin Android apps)
bazel_dep(name = "rules_kotlin", version = "2.2.2")

# Android SDK configuration
# 使用环境变量 ANDROID_HOME 自动检测 SDK 位置
android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
android_sdk_repository_extension.configure()

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_smithy_go",
    "com_github_charmbracelet_lipgloss",
    "com_github_dgraph_io_badger_v4",
    "com_github_goccy_go_yaml",
    "com_github_google_jsonschema_go",
    "com_github_google_uuid",
    "com_github_googleapis_gax_go_v2",
    "com_github_gorilla_websocket",
    "com_github_itchyny_gojq",
    "com_github_kaptinlin_jsonrepair",
    "com_github_openai_openai_go",
    "com_github_pion_rtp",
    "com_github_pion_webrtc_v3",
    "com_github_spf13_cobra",
    "com_github_tphakala_go_audio_resampling",
    "com_github_vmihailenco_msgpack_v5",
    "in_gopkg_yaml_v3",
    "org_golang_google_genai",
)

# yq tool for YAML processing
yq = use_extension("//:extensions.bzl", "yq")
use_repo(yq, "yq")

# mdbook tool for documentation
mdbook_ext = use_extension("//:extensions.bzl", "mdbook")
use_repo(mdbook_ext, "mdbook")

# mermaid.js for documentation diagrams
mermaid_ext = use_extension("//:extensions.bzl", "mermaid")
use_repo(mermaid_ext, "mermaid")

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Rust crate dependencies from Cargo.toml (crate_universe)
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//rust:Cargo.lock",
    manifests = [
        "//rust:Cargo.toml",
        "//rust/audio:Cargo.toml",
        "//rust/buffer:Cargo.toml",
        "//rust/genx:Cargo.toml",
        "//rust/dashscope:Cargo.toml",
        "//rust/minimax:Cargo.toml",
        "//rust/mqtt0:Cargo.toml",

        "//rust/luau:Cargo.toml",
        "//rust/cmd/dashscope:Cargo.toml",
        "//rust/cmd/minimax:Cargo.toml",
        "//rust/ncnn:Cargo.toml",
        "//rust/onnx:Cargo.toml",
        "//rust/vecid:Cargo.toml",
        "//rust/voiceprint:Cargo.toml",
        "//rust/graph:Cargo.toml",
        "//rust/vecstore:Cargo.toml",
        "//rust/embed:Cargo.toml",
        "//rust/recall:Cargo.toml",
        "//examples/rust/audio:Cargo.toml",
        "//examples/rust/minimax:Cargo.toml",
        "//examples/rust/genx:Cargo.toml",
    ],
)
use_repo(crate, "crate_index")

# Audio libraries (portaudio, opus, lame, ogg)
audio_libs = use_extension("//:extensions.bzl", "audio_libs")
use_repo(audio_libs, "lame", "ogg", "opus", "portaudio")

# ncnn (neural network inference, static library)
ncnn_ext = use_extension("//:extensions.bzl", "ncnn_ext")
use_repo(ncnn_ext, "ncnn")

# ONNX Runtime (pre-built shared library)
onnxruntime_ext = use_extension("//:extensions.bzl", "onnxruntime_ext")
use_repo(onnxruntime_ext, "onnxruntime")

# PNNX + ONNX models (for model conversion)
pnnx_ext = use_extension("//:extensions.bzl", "pnnx_ext")
use_repo(
    pnnx_ext,
    "pnnx",
    "onnx_speaker_eres2net",
    "model_vad_silero",
)

# Luau scripting language
luau_ext = use_extension("//:extensions.bzl", "luau")
use_repo(luau_ext, "luau")

# ============================================================================
# HarmonyOS SDK (自动下载，无需安装 DevEco Studio)
# ============================================================================
hos_sdk = use_extension("//bazel/harmonyos:extensions.bzl", "hos_sdk_extension")
hos_sdk.sdk(
    install_components = ["OpenHarmony/toolchains:9"],
)
use_repo(hos_sdk, "hos_sdk")

# ============================================================================
# OpenERP module override
# CI: fetch from GitHub at pinned commit.
# Local dev: override with --override_module=openerp=../../openerp/main
# ============================================================================
git_override(
    module_name = "openerp",
    remote = "https://github.com/haivivi/openerp.git",
    commit = "03685b38c58ec20164055dd551ffa3bdcad28f7b",
)
