package(default_visibility = ["//visibility:public"])

# Documentation source files (markdown and assets)
filegroup(
    name = "srcs",
    srcs = glob(
        [
            "en/**/*.md",
            "zh/**/*.md",
        ],
    ) + glob(
        [
            "**/*.png",
            "**/*.jpg",
            "**/*.svg",
        ],
        allow_empty = True,
    ),
)
