# End-to-end integration tests
#
# e2e/
# ├── cmd/              - CLI e2e test runners
# │   ├── minimax/
# │   ├── doubaospeech/
# │   └── dashscope/
# ├── chatgear/         - ChatGear integration tests
# ├── genx/             - GenX transformer chain tests
# ├── doubaospeech/     - Doubao Speech integration tests
# ├── doubao_minimax/   - Cross-service integration tests
# ├── matchtest/        - Intent matching e2e tests
# └── voiceprint/       - Voiceprint E2E test runner

package(default_visibility = ["//visibility:public"])
