# Examples directory structure:
#
# examples/
# ├── bazel/        - Bazel mobile platform examples
# │   ├── ios/       - iOS examples (rules_apple, rules_swift)
# │   ├── android/   - Android examples (rules_android, rules_kotlin)
# │   └── harmonyos/ - HarmonyOS examples (custom rules_harmonyos)
# ├── cmd/          - CLI test scripts (shell)
# │   ├── minimax/
# │   └── doubaospeech/
# ├── go/           - Go examples (single go.mod)
# │   ├── audio/
# │   ├── dashscope/
# │   ├── doubaospeech/
# │   ├── genx/
# │   └── minimax/
# └── rust/         - Rust examples
#     └── minimax/

package(default_visibility = ["//visibility:public"])
