# Rust workspace root BUILD file
#
# This workspace contains three crates:
#   - //rust/minimax:giztoy_minimax - MiniMax SDK library
#   - //rust/cli:giztoy_cli - CLI utilities library
#   - //rust/cmd/minimax:minimax - MiniMax CLI binary

package(default_visibility = ["//visibility:public"])

# Convenience alias for the CLI binary
alias(
    name = "minimax",
    actual = "//rust/cmd/minimax",
)

# Convenience alias for the SDK library
alias(
    name = "giztoy_minimax",
    actual = "//rust/minimax:giztoy_minimax",
)

# Convenience alias for the CLI library
alias(
    name = "giztoy_cli",
    actual = "//rust/cli:giztoy_cli",
)

# Phase B: inference + voiceprint
alias(
    name = "giztoy_ncnn",
    actual = "//rust/ncnn:giztoy_ncnn",
)

alias(
    name = "giztoy_onnx",
    actual = "//rust/onnx:giztoy_onnx",
)

alias(
    name = "giztoy_voiceprint",
    actual = "//rust/voiceprint:giztoy_voiceprint",
)

alias(
    name = "giztoy_vecid",
    actual = "//rust/vecid:giztoy_vecid",
)

# Phase A: memory pipeline
alias(
    name = "giztoy_graph",
    actual = "//rust/graph:graph",
)

alias(
    name = "giztoy_vecstore",
    actual = "//rust/vecstore:vecstore",
)

alias(
    name = "giztoy_embed",
    actual = "//rust/embed:embed",
)

alias(
    name = "giztoy_recall",
    actual = "//rust/recall:recall",
)
