[workspace]
resolver = "2"
members = [
    "audio",
    "buffer",
    "genx",
    "dashscope",
    "minimax",
    "doubaospeech",
    "mqtt",
    "cli",
    "cmd/dashscope",
    "cmd/minimax",
    "cmd/doubaospeech",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["giztoy"]

[workspace.dependencies]
# Internal crates
giztoy-audio = { path = "audio" }
giztoy-buffer = { path = "buffer" }
giztoy-genx = { path = "genx" }
giztoy-dashscope = { path = "dashscope" }
giztoy-minimax = { path = "minimax" }
giztoy-doubaospeech = { path = "doubaospeech" }
giztoy-mqtt = { path = "mqtt" }
giztoy-cli = { path = "cli" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls-tls for pure Rust TLS, ring for crypto)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JSON Schema
schemars = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
hex = "0.4"
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
bytes = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
http = "1"

# MQTT
rumqttc = "0.24"
rumqttd = "0.19"
parking_lot = "0.12"
url = "2"

# Dev
tokio-test = "0.4"
