load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "matchtest_lib",
    srcs = [
        "benchmark.go",
        "main.go",
        "runner.go",
        "server.go",
    ],
    importpath = "github.com/haivivi/giztoy/e2e/matchtest",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/genx",
        "//go/pkg/genx/match",
        "//go/pkg/genx/modelloader",
        "@com_github_goccy_go_yaml//:go-yaml",
    ],
)

go_binary(
    name = "matchtest",
    embed = [":matchtest_lib"],
    visibility = ["//visibility:public"],
)

# Run benchmark (Go), output report.json
# tags = ["manual"] prevents automatic build by //... (requires network/API keys)
genrule(
    name = "run",
    srcs = [
        ":rules",
        ":models",
    ],
    outs = ["report.json"],
    cmd = """
        RULES_DIR=$$(dirname $$(echo "$(locations :rules)" | cut -d' ' -f1))
        MODELS_DIR=$$(dirname $$(echo "$(locations :models)" | cut -d' ' -f1))
        $(location :matchtest) \
            -rules $$RULES_DIR \
            -models $$MODELS_DIR \
            -model qwen/turbo \
            -o $@
    """,
    tools = [":matchtest"],
    local = True,
    tags = ["manual", "requires-network"],
)

# Run benchmark (Rust), output report.json
genrule(
    name = "run_rust",
    srcs = [
        ":rules",
        ":models",
    ],
    outs = ["report_rust.json"],
    cmd = """
        RULES_DIR=$$(dirname $$(echo "$(locations :rules)" | cut -d' ' -f1))
        MODELS_DIR=$$(dirname $$(echo "$(locations :models)" | cut -d' ' -f1))
        $(location //rust/cmd/matchtest) \
            --rules $$RULES_DIR \
            --models $$MODELS_DIR \
            --model qwen/turbo \
            --output $@
    """,
    tools = ["//rust/cmd/matchtest"],
    local = True,
    tags = ["manual", "requires-network"],
)

# Test rules - shared from testdata
filegroup(
    name = "rules",
    srcs = ["//testdata/matchtest:rules"],
)

# Model configs - shared from testdata
filegroup(
    name = "models",
    srcs = ["//testdata/models"],
)
