load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "memory_lib",
    srcs = [
        "generate.go",
        "main.go",
        "runner.go",
    ],
    importpath = "github.com/haivivi/giztoy/e2e/memory",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/genx/modelloader",
        "//go/pkg/graph",
        "//go/pkg/kv",
        "//go/pkg/memory",
        "@com_github_goccy_go_yaml//:go-yaml",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
    ],
)

go_binary(
    name = "memory",
    embed = [":memory_lib"],
    visibility = ["//visibility:public"],
)
